--- a/pom.xml
+++ b/pom.xml
@@ -29,11 +29,11 @@
             <scope>provided</scope>
         </dependency>
         
-        <dependency>
+        <!--<dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.29</version>
-        </dependency>
+        </dependency>-->
         
         <dependency>
             <groupId>org.postgresql</groupId>
