--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,12 @@
             <scope>provided</scope>
         </dependency>
         
+        <dependency>
+            <groupId>net.sf.jasperreports</groupId>
+            <artifactId>jasperreports</artifactId>
+            <version>6.19.1</version>
+        </dependency>
+        
     </dependencies>
 
     <build>
